--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.61"
 clap = { version = "3.2.17", features = ["derive"] }
+dirs = "4.0.0"
 rspotify = { version = "0.11.5", features = ["cli"]}
 tokio = { version = "1.20.1", features = ["full"] }
