--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,10 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.61"
+async-trait = "0.1.57"
 clap = { version = "3.2.17", features = ["derive"] }
 colour = "0.6.0"
 dirs = "4.0.0"
+question = "0.2.2"
 rspotify = { version = "0.11.5", features = ["cli"]}
 tokio = { version = "1.20.1", features = ["full"] }
