--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ clap = { version = "3.2.17", features = ["derive"] }
 colour = "0.6.0"
 dirs = "4.0.0"
 dyn-clone = "1.0.9"
+env_logger = "0.9.0"
 question = "0.2.2"
 rspotify = { version = "0.11.5", features = ["cli"]}
 tokio = { version = "1.20.1", features = ["full"] }
